Notify - fixed top align

--- a/app/app/styles/_notify.scss
+++ b/app/app/styles/_notify.scss
@@ -44,7 +44,7 @@
     margin-left: -475px;
     position: fixed;
     right: 0;
-    top: 60px;
+    top: 50px;
     z-index: 80;
     /** under navigation bar */
     .alert-box {
